# agents

3_crew/content_creator/: README.md  pyproject.toml
3_crew/content_creator/src/content_creator/: crew.py  main.py
3_crew/content_creator/src/content_creator/config/: agents.yaml  tasks.yaml
